# DIALECTIC_EDGE

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  AUTO_TRACK.md  BACKTEST.md  CONTRIBUTING.md  DATA_SOURCES_AUDIT.md  DIGEST_CACHE.md  FORECASTS.md  MARKET_CACHE.md  README.md  agents.py  ai_provider.py  alert_system.py  analysis_service.py  auto_tracker.py  backtester.py  chart_generator.py  config.py  cot_data.py  cpi_config.py  data_sources.py  database.py  debate_storage.py  decision_engine.py  etf_flows.py  github_export.py  learning.py  main.py  market_data.py  metrics.py  nixpacks.toml  pipeline.py  positions.json  prompt_versions.py  pyproject.toml  quant_filter.py  report_sanitizer.py  (+15 more)
.github/workflows/: lint.yml  tests.yml
core/: __init__.py  analysis_ideas_adapter.py  audit.py  calibration.py  calibration_cache.py  confluence.py  correlation.py  data_enricher.py  decision_engine.py  digest_context.py  dynamic_risk.py  economic_calendar.py  event_defense.py  horizons.py  macro_regime.py  market_complexity.py  markov_regime.py  multi_tf.py  post_mortem.py  provenance.py  recalibration.py  regime_detector.py  results_export.py  screener.py  signal.py  signal_scorer.py  sizing_state.py  support_resistance.py  volatility_forecast.py  walk_forward.py  whale_detector.py
docs/: BEGINNER_GUIDE.md  quant_research_v2.md
market_indicators/: __init__.py  aggregator.py  macro_extended.py  onchain.py  scorer.py  smart_money.py
refactor/: __init__.py  examples.py  models.py  utils.py
refactor/handlers/: __init__.py  admin_handler.py  debate_handler.py  funding_handler.py  market_handler.py  portfolio_handler.py  profile_handler.py  sniping_handler.py  utils.py
refactor/interfaces/: __init__.py  providers.py
refactor/prompts/: __init__.py  market.py  russia.py
refactor/providers/: __init__.py  ai_providers.py  cache_providers.py  database_providers.py  market_providers.py  news_providers.py  storage_providers.py
scripts/: build_beginner_guide_pdf.py  preflight_guards_test.py  run_quick_backtest.py
tests/: test_autotrade_whiplash.py  test_calibration.py  test_complexity_rendering.py  test_funding_handler.py  test_help_markets_markdown.py  test_market_complexity.py  test_markets_explain_button.py  test_markets_sections.py  test_pick_best_signal.py  test_post_mortem.py  test_provenance.py  test_quant_filter.py  test_quant_models.py  test_recalibration.py  test_signal_explain_button.py  test_signal_message_format.py  test_signal_scorer.py  test_signals_split.py  test_sl_tp_rendering.py  test_sniping_handler.py  test_support_resistance.py  test_walk_forward.py
trading_system/: __init__.py  batch_runner.py  cli_main.py  config_loader.py  dashboard_app.py  default_trading_config.json  equity_metrics.py  features.py  market_cache.py  risk.py
